# llm-kafka-boilerplate

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  python_coding_rules.md  requirements-dev.txt  requirements.txt
docs/: api.md  architecture.md  data_flow.md  deployment.md  environment_variables.md
docs/examples/: sentiment_analysis.md
scripts/: run.py  setup.py
src/: __init__.py  __main__.py  app.py
src/config/: __init__.py  config.py
src/data/: __init__.py  cache.py  examples_manager.py
src/kafka/: __init__.py  consumer.py  kafka_service.py  producer.py
src/llm/: __init__.py  client.py  rate_limiter.py
src/llm/providers/: __init__.py  base.py  openai.py  openrouter.py
src/processing/: __init__.py  processor.py  processor_factory.py
src/utils/: __init__.py  error_handling.py  logging.py  metrics.py
templates/config/: custom_config.py
templates/llm/: custom_provider.py
templates/processor/: custom_processor.py
tests/: __init__.py  conftest.py  test_app.py
tests/test_config/: test_config.py
tests/test_data/: __init__.py  test_cache.py  test_examples_manager.py
tests/test_kafka/: __init__.py
tests/test_llm/: __init__.py
tests/test_processing/: __init__.py  test_processor.py  test_processor_factory.py
tests/test_utils/: test_error_handling.py  test_logging.py  test_metrics.py
